--- a/public/index.css
+++ b/public/index.css
@@ -5,7 +5,7 @@ html {
     font-style: normal;
     line-height: 1.375;
     text-transform: none;
-    background: radial-gradient(circle, rgba(5, 5, 5, 0.15) 0%, rgba(255, 255, 255, 0.8) 100%);
+    background: #262626;
 }
 
 body {
@@ -18,6 +18,17 @@ body {
 
 h1 {
     font-size: 30px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+p {
+    cursor: pointer;
+    color: #FFFFFF;
+}
+
+b {
+    color: #FFFFFF;
 }
 
 .login-container {
@@ -27,36 +38,48 @@ h1 {
     width: 300px;
     height: 450px;
     background-color: rgba(255, 255, 255, 0.6);
-    border: 1px solid #ccc;
+    border: none;
     padding: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
+    background-color: #333333;
 }
 
 .login-container__window {
     display: flex;
     flex-direction: column;
-    padding: 60px;
 }
 
 .register-container {
     display: flex;
     flex-direction: column;
-    padding: 60px;
 }
 
 .login-container__window__input, .register-container__input {
-    width: 125px;
+    width: 200px;
     height: 23px;
     border-radius: 7px;
-    border: 0.5px solid #FFFFFF;
+    border: none;
     margin-top: 5px;
     margin-bottom: 20px;
+    background-color: #262626;
 }
 
 .login-container__window__submit-btn, .register-container__submit-btn {
-    width: 100px;
+    width: 200px;
     height: 23px;
+    border-radius: 20px;
+    border: none;
+    background-color: #262626;
+    color: #FFFFFF;
+}
+
+.login-container__window__submit-btn {
+    margin-bottom: 125px;
+}
+
+.register-container__submit-btn {
+    margin-bottom: 10px;
 }
 
 label > b {
